cmake_minimum_required(VERSION 3.10)
project (quickstart C)
link_directories(../lib)
include_directories(../include)
add_executable(quickstart quickstart.c)
IF (WIN32)
    target_link_libraries(quickstart typedb_driver_clib.dll.lib)
ELSE()
    target_link_libraries(quickstart typedb_driver_clib)
ENDIF()